--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,19 +11,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.temple.buttcoin.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textCatcher"
-        android:text="Hello World!" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/alert_dark_frame"
-        android:id="@+id/imageView"
-        android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/textCatcher"
-        android:layout_marginStart="64dp"
-        android:layout_marginBottom="177dp" />
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/screenFrame" />
+
 </RelativeLayout>
