--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,23 +7,10 @@
     tools:context="edu.temple.buttcoin.BalanceFragment">
 
 
-    <EditText
-        android:id="@+id/walletInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="1F1tAaz5x1HUXrCNLbtMDqcw6o5GNn4xqX" />
-
-    <Button
-        android:id="@+id/getWalletButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Go" />
-
-
-    <TextView
-        android:id="@+id/walletInfo"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/selectFrame"/>
+
 
 </LinearLayout>
