implemented VIewPager for viewing nearby blocks to queried one

--- a/app/src/main/res/layout/fragment_block.xml
+++ b/app/src/main/res/layout/fragment_block.xml
@@ -17,10 +17,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/getBlockButton"/>
 
-    <TextView
+    <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/blockInfo"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:id="@+id/blockViewer"/>
+
 
 </LinearLayout>
