--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -5,25 +5,9 @@
     android:orientation="vertical"
     tools:context="edu.temple.buttcoin.ChartFragment">
 
-
-    <EditText
-        android:id="@+id/chartinput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="1d" />
-
-    <Button
-        android:id="@+id/getChartButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Go" />
-
-
-    <ImageView
-        android:id="@+id/chartInfo"
+    <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/chartGraph"/>
 
 </LinearLayout>
