--- a/app/src/main/res/layout-land/fragment_balance_viewer.xml
+++ b/app/src/main/res/layout-land/fragment_balance_viewer.xml
@@ -39,7 +39,7 @@
         android:id="@+id/walletInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment" />
+        android:text="@string/blank_message" />
 
 
     <ImageView
