--- a/app/src/main/res/layout/fragment_block.xml
+++ b/app/src/main/res/layout/fragment_block.xml
@@ -15,6 +15,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/go_button"
         android:id="@+id/getBlockButton"/>
 
     <android.support.v4.view.ViewPager
